Add unread notification status by type
